# Ping-WebApp

./: Makefile  README.md
backend/: .pre-commit-config.yaml  Dockerfile  docker-compose.yml  entrypoint.sh  pyproject.toml
backend/.environment/local/: app  db
backend/ping_app/: manage.py
backend/ping_app/domain_responses/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/ping_app/domain_responses/management/commands/: ping.py
backend/ping_app/domain_responses/migrations/: 0001_initial.py  0002_alter_domainresponse_domain.py
backend/ping_app/ping_app/: asgi.py  settings.py  urls.py  wsgi.py
backend/ping_app/services/: scan.py
frontend/: Dockerfile  docker-compose.yml  package-lock.json  package.json
frontend/src/api/: fetchers.js
frontend/src/components/: App.css  App.jsx
frontend/src/components/Chart/: Chart.css  Chart.jsx
frontend/src/components/common/: index.js
frontend/src/components/common/ErrorBlock/: ErrorBlock.css  ErrorBlock.jsx
frontend/src/components/common/Loader/: Loader.css  Loader.jsx
frontend/src/components/common/LoadingOverlay/: LoadingOverlay.css  LoadingOverlay.jsx
frontend/src/utils/: chartDataTemplate.js  index.js
